--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a table for all available pets",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production nodemon server/server.js",
+    "start": "NODE_ENV=production node server/server.js --open --hot",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack serve --open & nodemon server/server.js"
   },
