--- a/package.json
+++ b/package.json
@@ -12,14 +12,9 @@
   "author": "Chris Hicks",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.2",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.6.1",
-    "react-router-dom": "^6.6.1",
-    "redux": "^4.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
@@ -28,10 +23,10 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.20",
     "style-loader": "^3.3.1",
-    "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
